env file removed

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #backend
-/backend/node_modules
-/backend/.env
+backend/node_modules
+backend/.env
 # dependencies
 expense_tracker/node_modules
 expense_tracker/.pnp
