--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "node":"20.x"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
